@@ -16,6 +16,8 @@ workflow       = static
 workflow       = linux
 version_plugin = PkgVersion::Block
 
+diag = +Data::Section::Writer
+
 [Author::Plicease::Core]
 
 [Author::Plicease::Upload]
@@ -30,8 +32,10 @@ remove = Foo
 remove = DataInCode
 remove = DataOnly
 remove = Role::Tiny::With
+remove = Data::Section::Pluggable::Role::FormatContentPlugin
 
 [InsertExample]
 remove_boiler = 1
 match_boiler_barrier = ^use 5
 match_boiler_barrier = ^use experimental
+
