@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Added support for Data::Section::Pluggable::FormatContentPlugin if installed (gh#4)
 
 0.01      2024-12-04 22:26:57 -0700
   - initial version
